--- a/src/layouts/carousel.sass
+++ b/src/layouts/carousel.sass
@@ -8,8 +8,8 @@ $carousel-animation-method: ease-in-out
 
 h1.main-title
   position: absolute;
-  z-index: 999;
-  top: 10rem;
+  z-index: 1;
+  top: 8rem;
   left: 10vw;
   padding: 20px 30px;
   background-color: $white;
